# io-bench-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  Makefile.simple  README.md
build-cmake/: CMakeCache.txt
docs/: FORMAT_FEATURES.md  FORMAT_IMPLEMENTATION.md  RFC_IO_FORMATS_CPP.md
include/io_bench/: benchmark.hpp  formats.hpp  report.hpp  types.hpp
src/: benchmark.cpp  formats.cpp  main.cpp  python_util.cpp  report.cpp
src/formats/: adios2.cpp  asdf.cpp  binary.cpp  duckdb.cpp  extra.cpp  hdf5.cpp  json.cpp  mdio.cpp  miniseed.cpp  netcdf.cpp  npy.cpp  parquet.cpp  rsf.cpp  segd.cpp  segy.cpp  tensorstore.cpp  tensorstore_native.cpp  tiledb.cpp  zarr.cpp
tests/: test_benchmark.cpp  test_formats.cpp  test_geo_formats.cpp
